                 FWHMs.
  July 12,2007 - Fix jumbo buffer handling in scriptable.
  Aug. 16,2007 - BZ 318, The Old GUI spectrum listing was showing the
                wrong gate applications unless the filter string was *
                because the applied gate used was determined using the wrong
                index into the application list.
  Sep 10, 2007 - BZ 318 again.. use hashtables for the gates since indices are
                 fragile wrt  the insertion of new spectra.
  Sep 11, 2007 - Use spectrum definition in swrite to get the acutal axis
                 limits rather than using the conversions in a hokey way.
                 But remember the summary spectrum's special case.
3.1-005 released

Oct 11, 2007 3.1-006 development begins.
  October   15, 2007 - BZ324 - Fixed a bunch of issues with the test data source.
  November  26, 2007 - BZ327 - Multicolored monster has problems when parameter definitions
                               are changed and when such changes are asked to modify spectrum
                               definitions.
                             - Avoid std::string string pooling as in CTreeParameter::setUnits
                               as that's not threadsafe.
February 25, 2008 - Workaround errror in lesstif file prompter dialog box.
                    If the dialog is reused, the filter mask is replaced
                    with the last selected file.
March 21, 2008 - Fix defect in multicolored monster GUI.  Was building lists
                 with append rather than lappend.  This caused problems
                 with the units list when unit-less parameters were used,
		 as their list entries would collapse out of the list.


March 24, 2008 3.1-007 released
Started 3.1-008
March 28, 2008 - BZ 330 Port fix from 3.0, ensure that [X] calls some sort
                 of callback that deletes the widget.
               - In support of the above, add easy mechanism to remove
                 callbacks.